--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: Poppins;
+    font-family: 'Poppins', sans-serif;
 }
 
 @font-face {
@@ -46,7 +46,7 @@ body {
 .labels {
     display: block;
     color: hsl(0, 1%, 44%);
-    font-family: Poppins-LBold;
+    font-weight: bold;
     margin-bottom: 8px;
 }
 
@@ -89,11 +89,13 @@ button {
 /* result section styling */
  .result-p {
     font-size: 4.7rem;
-    font-family: Poppins-Bold;
+    font-weight: 800;
+    font-style: italic;
  }
 
  span {
-    font-family: Poppins-Bold;
+    font-weight: 800;
+    font-style: italic;
     color: hsl(259, 100%, 65%);;
  }
 
@@ -102,7 +104,7 @@ button {
     color: hsl(0, 100%, 67%);
     margin-top: 4px;
     display: none;
-    font-family: Poppins-Italic;
+    font-style: italic;
     font-size: 14px;
  }
 
